<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pill_schedule"
        android:title="@string/pill_schedule"
        android:icon="@drawable/ic_pill"/>

    <item
        android:id="@+id/setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item
        android:id="@+id/problem"
        android:title="@string/report_a_problem"
        android:icon="@drawable/ic_baseline_report_problem_24"/>

    <item
        android:id="@+id/share"
        android:title="@string/share_app"
        android:icon="@drawable/ic_baseline_share_24"/>

    <item
        android:id="@+id/love_it"
        android:title="@string/love_it"
        android:icon="@drawable/ic_baseline_favorite_border_24"/>

    <item
        android:id="@+id/log_out"
        android:title="@string/log_out"
        android:icon="@drawable/logout"/>
</menu>