<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Headline"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mainimage" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/let_s_sign_you_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/welcome_back_you_had_been_off_for_long_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_id_text_layout"
        style="@style/Widget.MedicineReminder.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_user_id"
        app:errorIconDrawable="@drawable/ic_baseline_error_outline_24"
        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="text"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_id_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_password"
        app:errorIconDrawable="@drawable/ic_baseline_error_outline_24"
        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_id_text_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_id_password_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_id_password_layout"
        android:text="@string/forgot_password"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:id="@+id/option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <View
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_height="wrap_content"
            android:text="@string/or"/>

        <View
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_weight="4"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/google"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/option"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/g"/>


    <ImageView
        android:id="@+id/facebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/option"
        app:layout_constraintStart_toEndOf="@id/google"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/fb"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="login"
        android:text="@string/login"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:onClick="register"
            android:textColor="@color/indigo_800"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>

    </LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/register_btn"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:onClick="register"-->
    <!--        android:layout_marginStart="40dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:text="@string/register"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/login_btn" />-->

</androidx.constraintlayout.widget.ConstraintLayout>