<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/report_problem"
        android:textStyle="italic|bold"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MedicineReminder.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        android:hint="@string/enter_your_problem">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/problem"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text"
            android:maxLines="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/send"
        android:textStyle="italic"
        android:backgroundTint="#AB26E3"/>

</androidx.constraintlayout.widget.ConstraintLayout>