<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/search_covid"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        android:text="Search For COVID-19"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/search_covid"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/features"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="20dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/features_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/features"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/paths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/features_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/directions"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/paths_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/paths"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/insurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/paths_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/insurance"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/insurance_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/insurance"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/app_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/insurance_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/mini_app_store"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mini_app_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/app_store"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mini_app_recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/physical_fitness_is_the_first_requisite_of_happiness"
        android:layout_marginTop="20dp"
        android:textColor="#E81E1E"
        android:textStyle="italic"
        />



</androidx.constraintlayout.widget.ConstraintLayout>